# yolocpp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  SESSION_DIGEST.md  TODO.md  VERSION
cmake/: FindTensorRT.cmake  dependencies.cmake  yolocpp_config.hpp.in
docs/: rfdetr_arch.md  screen_sweep.md  screen_train_sweep.md  screen_train_sweep_60variants.csv  screen_train_sweep_60variants_lores.csv
docs/data/: bench_config.yaml  training.csv  training_1ep.csv  training_5ep.csv  training_delta_0.99.68.csv  training_delta_b16_0.99.71.csv  training_rerun_0.99.68.csv  training_rerun_b16_0.99.71.csv
examples/: CMakeLists.txt  README.md  benchmark_model.cpp  end_to_end.cpp  export_to_onnx.cpp  predict_directory.cpp  predict_image.cpp  predict_video.cpp  train_finetune.cpp
include/yolocpp/: api.hpp
include/yolocpp/cli/: args.hpp  commands.hpp  data_yaml.hpp  model_info.hpp  resolve.hpp
include/yolocpp/core/: device.hpp  log.hpp  profile.hpp  version.hpp
include/yolocpp/datasets/: augment.hpp  coco_dataset.hpp  flat_dataset.hpp  voc_dataset.hpp  yolo_dataset.hpp
include/yolocpp/engine/: benchmark.hpp  benchmark_internal.hpp  ddp.hpp  format_eval.hpp  trainer.hpp  validator.hpp
include/yolocpp/inference/: frame_predictor.hpp  letterbox.hpp  nms.hpp  predictor.hpp  results.hpp  rfdetr_predictor.hpp  task_predictors.hpp  trt_predictor.hpp  trt_task_eval.hpp
include/yolocpp/losses/: hungarian.hpp  rfdetr_loss.hpp  yolo10_loss.hpp  yolo1_loss.hpp  yolo26_loss.hpp  yolo2_loss.hpp  yolo6_loss.hpp  yolo7_loss.hpp  yolo8_loss.hpp  yolov8_loss.hpp
include/yolocpp/metrics/: map.hpp
include/yolocpp/models/: rfdetr.hpp  rfdetr_backbone.hpp  rfdetr_decoder.hpp  rfdetr_encoder.hpp  rfdetr_projector.hpp  rfdetr_transformer.hpp  yolo1.hpp  yolo10.hpp  yolo11.hpp  yolo11_tasks.hpp  yolo12.hpp  yolo12_tasks.hpp  yolo13.hpp  yolo13_tasks.hpp  yolo2.hpp  yolo26.hpp  yolo26_tasks.hpp  yolo3.hpp  yolo4.hpp  yolo5.hpp  yolo6.hpp  yolo7.hpp  yolo8.hpp  yolo8_classify.hpp  yolo8_tasks.hpp  yolo9.hpp  yolov3.hpp  yolov5.hpp  yolov8.hpp  yolov8_classify.hpp  yolov8_tasks.hpp
include/yolocpp/registry/: version_adapter.hpp
include/yolocpp/serialization/: darknet_weights.hpp  onnx_export.hpp  pt_loader.hpp  pt_save.hpp  rfdetr_weights.hpp  trt_export.hpp  yolov10_weights.hpp  yolov1_weights.hpp  yolov2_weights.hpp  yolov3_weights.hpp  yolov6_weights.hpp  yolov7_weights.hpp  yolov9_weights.hpp
include/yolocpp/tasks/: classify_train.hpp  pose_obb_train.hpp  segment_train.hpp
include/yolocpp/web/: web_ui.hpp
runs/compare/: README.md  index.csv
runs/compare/train/1/: manifest.yaml
runs/compare/train/10/: manifest.yaml
runs/compare/train/11/: manifest.yaml
runs/compare/train/12/: manifest.yaml
runs/compare/train/13/: manifest.yaml
runs/compare/train/14/: manifest.yaml
runs/compare/train/15/: manifest.yaml
runs/compare/train/16/: manifest.yaml
runs/compare/train/17/: manifest.yaml
runs/compare/train/18/: manifest.yaml
runs/compare/train/19/: manifest.yaml
runs/compare/train/2/: manifest.yaml
runs/compare/train/20/: manifest.yaml
scripts/: audit_deps.sh  build_train_delta.sh  check_version_literals.sh  convergence_sweep.sh  full_matrix_sweep.sh  install_third_party.sh  launch_ddp.sh  onnx_export_sweep.sh  parity_check.sh  publish_weights.sh  screen_rfdetr_sweep.sh  screen_train_sweep.sh  screen_train_sweep_lores.sh  screen_variant_sweep.sh  task_parity_compare.sh  task_predict_sweep.sh  train_matrix.sh  train_matrix.tsv  train_metrics_sweep.sh
src/cli/: api.cpp  args.cpp  commands.cpp  data_yaml.cpp  main.cpp  model_info.cpp  resolve.cpp
src/core/: device.cpp  log.cpp  profile.cpp  version.cpp
src/datasets/: augment.cpp  coco_dataset.cpp  flat_dataset.cpp  voc_dataset.cpp  yolo_dataset.cpp
src/engine/: benchmark.cpp  ddp.cpp  format_eval.cpp  trainer.cpp  validator.cpp
src/inference/: letterbox.cpp  nms.cpp  predictor.cpp  results.cpp  rfdetr_predictor.cpp  task_predictors.cpp  trt_predictor.cpp  trt_task_eval.cpp
src/losses/: hungarian.cpp  rfdetr_loss.cpp  yolo10_loss.cpp  yolo1_loss.cpp  yolo26_loss.cpp  yolo2_loss.cpp  yolo6_loss.cpp  yolo7_loss.cpp  yolo8_loss.cpp  yolov8_loss.cpp
src/metrics/: map.cpp
src/models/: rfdetr.cpp  rfdetr_backbone.cpp  rfdetr_decoder.cpp  rfdetr_encoder.cpp  rfdetr_projector.cpp  rfdetr_transformer.cpp  yolo1.cpp  yolo10.cpp  yolo11.cpp  yolo11_tasks.cpp  yolo12.cpp  yolo12_tasks.cpp  yolo13.cpp  yolo13_tasks.cpp  yolo2.cpp  yolo26.cpp  yolo26_tasks.cpp  yolo3.cpp  yolo4.cpp  yolo5.cpp  yolo6.cpp  yolo7.cpp  yolo8.cpp  yolo8_classify.cpp  yolo8_tasks.cpp  yolo9.cpp  yolov3.cpp  yolov5.cpp  yolov8.cpp  yolov8_classify.cpp  yolov8_tasks.cpp
src/registry/: version_registry.cpp
src/serialization/: darknet_weights.cpp  onnx_export.cpp  pt_loader.cpp  pt_save.cpp  rfdetr_weights.cpp  trt_export.cpp  yolov10_weights.cpp  yolov1_weights.cpp  yolov2_weights.cpp  yolov3_weights.cpp  yolov6_weights.cpp  yolov7_weights.cpp  yolov9_weights.cpp
src/tasks/: classify_train.cpp  pose_obb_train.cpp  segment_train.cpp
src/web/: clay_impl.c  web_server.cpp  web_ui.cpp
tests/: CMakeLists.txt  diff_model_pt.cpp  dump_trt.cpp  dump_v10_forward.cpp  dump_v6_layers.cpp  inspect_pt.cpp  make_test_video.cpp  parity_compare.cpp  run_convert.cpp  smoke_kernel.cu  smoke_test.cpp  test_all_scales.cpp  test_api.cpp  test_benchmark.cpp  test_cross_backend_parity.cpp  test_ddp_smoke.cpp  test_flat_dataset.cpp  test_letterbox_pad.cpp  test_mosaic_mixup.cpp  test_phase31_train.cpp  test_phase3_tasks.cpp  test_predict.cpp  test_pt_loader.cpp  test_pt_save.cpp  test_pt_save_layout.cpp  test_registry.cpp  test_rfdetr_backbone.cpp  test_rfdetr_decode.cpp  test_rfdetr_encoder.cpp  test_rfdetr_forward.cpp  test_rfdetr_loss.cpp  test_rfdetr_parity_dump.cpp  test_rfdetr_pt_load.cpp  test_rfdetr_topk_probe.cpp  test_task_cross_backend_parity.cpp  test_task_draw.cpp  test_train_overfit.cpp  test_trt_export.cpp  test_v10_dual_train.cpp  test_v10_e2e.cpp  (+26 more)
tools/: CMakeLists.txt  convert_weights.cpp  profile_trt.cpp
(+11 files in other folders)
